kubernetes/apps/lakehouse/trino/app/ingress.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/networking.k8s.io/ingress_v1.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app trino-tailscale
  namespace: lakehouse
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
  annotations:
    tailscale.com/hostname: trino
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: trino
      port:
        number: 8080
